--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <div class="col-xl-2 col-md-4">
                         <div class="icon-box">
                             <i class="ri-compasses-2-fill"></i>
-                            <h3><a href="#skill" class="scrollto">Compentency</a></h3>
+                            <h3><a href="#skill" class="scrollto">Competency</a></h3>
                         </div>
                     </div>
                     <div class="col-xl-2 col-md-4">
@@ -135,12 +135,12 @@
                         <img src="./assets/img/profile3.png" alt="" width="150" />
                         <br /><br />
                         <h1 class="pb-2">Hi, I'm Ignaz</h1>
-                        <span class="role">IT Undergraduate • Full-stack Developer</span><br /><br /><br />
+                        <span class="role">Software Developer</span><br /><br /><br />
                         <p>
-                            My name Ignaz Maula Ibrahim. Undergraduate in Information and Technology with experience of working on multiple
-                            enterprise-level projects on multiple platforms. I love things related to computer especially in problem solving. As a
-                            software developer, I believe that there is no challenge too hard to be solved. Every challenge that I faced only
-                            motivated me to learn more and become better.
+                            I'm Ignaz. Undergraduate majoring in Information and Technology with experience of working on multiple enterprise-level
+                            projects on multiple platforms. I love things related to computer especially in problem solving. As a software developer,
+                            I believe that there is no challenge too hard to be solved. Every challenge that I faced only motivated me to learn more
+                            and become better.
                         </p>
                         <div class="social-links">
                             <a href="https://wa.me/081289188320" target="_blank" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
@@ -336,9 +336,9 @@
                                 <p><b>Software Engineer</b></p>
                                 <p><em>2022 - 2023</em></p>
                                 <p>
-                                    Developed various enterprise-level software that provides solutions through the utilization of IoT (Internet of
+                                    Developed various enterprise-level ERP software that provide solutions through the utilization of IoT (Internet of
                                     Things). Worked on multiple projects ranging from warehouse and inventory management system to field service
-                                    management system using ASP .NET, Entity Framework, and Blazor WebAssembly.
+                                    management system using MS SQL, ASP .NET, Entity Framework, and Blazor
                                 </p>
                             </div>
                             <div class="resume-item">
@@ -352,13 +352,6 @@
                             </div>
                             <h3 class="resume-title">Internship Experience</h3>
                             <div class="resume-item">
-                                <h4><a href="http://www.hardrockfm.com/hardrock-fm-bali" target="_blank">Hardrock FM Bali</a></h4>
-                                <p><b>Social Media Content & Graphic Designer Intern</b></p>
-                                <p><em>2017 - 2017</em></p>
-                                <p>Created graphic designs and videos for social media content and marketing purposes.</p>
-                                <br />
-                            </div>
-                            <div class="resume-item">
                                 <h4><a href="http://www.earthdigital.co.uk" target="_blank">Earth Digital Ltd. & RFIDiom Ltd.</a></h4>
                                 <p><b>Software Engineer Intern</b></p>
                                 <p><em>2021 - 2021</em></p>
@@ -366,6 +359,13 @@
                                     Developed variety of web and mobile applications such as property management software, event management software
                                     and online radio streaming platform.
                                 </p>
+                            </div>
+                            <div class="resume-item">
+                                <h4><a href="http://www.hardrockfm.com/hardrock-fm-bali" target="_blank">Hardrock FM Bali</a></h4>
+                                <p><b>Social Media Content & Graphic Designer Intern</b></p>
+                                <p><em>2017 - 2017</em></p>
+                                <p>Created graphic designs and videos for social media content and marketing purposes.</p>
+                                <br />
                             </div>
                         </div>
                     </div>
@@ -521,8 +521,54 @@
                                     <p>Website for BaliStuti Balinese Handicraft Store</p>
                                 </div>
                                 <div class="portfolio-links">
-                                    <!-- <a href="https://github.com/IgnazMaula/kitabantu-web-app" target="_blank"><i class="devicon-github-original"></i></a> -->
+                                    <a href="https://github.com/IgnazMaula/BaliStuti" target="_blank"><i class="devicon-github-original"></i></a>
                                     <a href="https://ignazmaula.github.io/BaliStuti/" target="_blank"><i class="bx bx-link"></i></a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                            <div class="portfolio-wrap">
+                                <img src="./assets/img/portfolio/task-management.png" class="img-fluid" alt="" />
+                                <div class="portfolio-info">
+                                    <h4>Task Management App</h4>
+                                    <p>Task management app build in React, Redux, and Material UI</p>
+                                </div>
+                                <div class="portfolio-links">
+                                    <a href="https://github.com/IgnazMaula/react-redux-advance" target="_blank"
+                                        ><i class="devicon-github-original"></i
+                                    ></a>
+                                    <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                            <div class="portfolio-wrap">
+                                <img src="./assets/img/portfolio/react-shopping-cart.png" class="img-fluid" alt="" />
+                                <div class="portfolio-info">
+                                    <h4>React Shopping Cart</h4>
+                                    <p>Shopping cart app build with React, Redux and Firebase</p>
+                                </div>
+                                <div class="portfolio-links">
+                                    <a href="https://github.com/IgnazMaula/react-redux-advance" target="_blank"
+                                        ><i class="devicon-github-original"></i
+                                    ></a>
+                                    <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                            <div class="portfolio-wrap">
+                                <img src="./assets/img/portfolio/react-blog.png" class="img-fluid" alt="" />
+                                <div class="portfolio-info">
+                                    <h4>React Blogpost</h4>
+                                    <p>Blog web app build in React using jsonplaceholder</p>
+                                </div>
+                                <div class="portfolio-links">
+                                    <a href="https://github.com/IgnazMaula/react-blogpost" target="_blank"><i class="devicon-github-original"></i></a>
+                                    <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                                 </div>
                             </div>
                         </div>
