--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
                         <h1 class="pb-2">Hi, I'm Ignaz</h1>
                         <span class="role">Software Developer</span><br /><br /><br />
                         <p>
-                            I'm Ignaz. Undergraduate majoring in Information and Technology with experience of working on multiple enterprise-level
-                            projects on multiple platforms. I love things related to computer especially in problem solving. As a software developer,
-                            I believe that there is no challenge too hard to be solved. Every challenge that I faced only motivated me to learn more
-                            and become better.
+                            I'm Ignaz, an undergraduate majoring in Information Technology with experience working on several enterprise-level
+                            projects across multiple platforms. I love coding-related activities and always enthusiastic about gaining new knowledge
+                            learning new skills. As a software developer, I believe no challenge is too hard to solve. Every challenge I face
+                            motivates me to learn more and become better.
                         </p>
                         <div class="social-links">
                             <a href="https://wa.me/081289188320" target="_blank" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
@@ -174,7 +174,7 @@
                                     <i class="bx bx-code-alt"></i>
                                 </div>
                                 <h4><a href="">Front-end Development</a></h4>
-                                <p>Develop the client-side of a website or mobile app to provides interactivity for the end-user</p>
+                                <p>Develop the client-side of a website or mobile app to provide interactivity for the end-user</p>
                             </div>
                         </div>
 
@@ -192,29 +192,11 @@
                                     <i class="bx bx-code-curly"></i>
                                 </div>
                                 <h4><a href="">Back-end Development</a></h4>
-                                <p>Develop the server-side of a website or mobile app to manages data transaction and business logic</p>
+                                <p>Develop the server-side of a website or mobile app to manage data transactions and business logic</p>
                             </div>
                         </div>
 
                         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
-                            <div class="icon-box iconbox-pink">
-                                <div class="icon">
-                                    <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
-                                        <path
-                                            stroke="none"
-                                            stroke-width="0"
-                                            fill="#f5f5f5"
-                                            d="M300,541.5067337569781C382.14930387511276,545.0595476570109,479.8736841581634,548.3450877840088,526.4010558755058,480.5488172755941C571.5218469581645,414.80211281144784,517.5187510058486,332.0715597781072,496.52539010469104,255.14436215662573C477.37192572678356,184.95920475031193,473.57363656557914,105.61284051026155,413.0603344069578,65.22779650032875C343.27470386102294,18.654635553484475,251.2091493199835,5.337323636656869,175.0934190732945,40.62881213300186C97.87086631185822,76.43348514350839,51.98124368387456,156.15599469081315,36.44837278890362,239.84606092416172C21.716077023791087,319.22268207091537,43.775223500013084,401.1760424656574,96.891909868211,461.97329694683043C147.22146801428983,519.5804099606455,223.5754009179313,538.201503339737,300,541.5067337569781"
-                                        ></path>
-                                    </svg>
-                                    <i class="bx bx-palette"></i>
-                                </div>
-                                <h4><a href="">UI/UX Design</a></h4>
-                                <p>Create a mock-up and design of UI and UX that eye catching, engaging and easy to use</p>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
                             <div class="icon-box iconbox-yellow">
                                 <div class="icon">
                                     <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -228,7 +210,25 @@
                                     <i class="bx bx-mobile-alt"></i>
                                 </div>
                                 <h4><a href="">Mobile App Development</a></h4>
-                                <p>Develop technology solution using mobile as the platform of the application</p>
+                                <p>Design and build software application for mobile devices for Android and iOS</p>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+                            <div class="icon-box iconbox-pink">
+                                <div class="icon">
+                                    <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            stroke="none"
+                                            stroke-width="0"
+                                            fill="#f5f5f5"
+                                            d="M300,541.5067337569781C382.14930387511276,545.0595476570109,479.8736841581634,548.3450877840088,526.4010558755058,480.5488172755941C571.5218469581645,414.80211281144784,517.5187510058486,332.0715597781072,496.52539010469104,255.14436215662573C477.37192572678356,184.95920475031193,473.57363656557914,105.61284051026155,413.0603344069578,65.22779650032875C343.27470386102294,18.654635553484475,251.2091493199835,5.337323636656869,175.0934190732945,40.62881213300186C97.87086631185822,76.43348514350839,51.98124368387456,156.15599469081315,36.44837278890362,239.84606092416172C21.716077023791087,319.22268207091537,43.775223500013084,401.1760424656574,96.891909868211,461.97329694683043C147.22146801428983,519.5804099606455,223.5754009179313,538.201503339737,300,541.5067337569781"
+                                        ></path>
+                                    </svg>
+                                    <i class="bx bx-palette"></i>
+                                </div>
+                                <h4><a href="">UI/UX Design</a></h4>
+                                <p>Create intuitive, engaging, and user-friendly interfaces design for websites, apps, and software</p>
                             </div>
                         </div>
 
@@ -245,8 +245,8 @@
                                     </svg>
                                     <i class="bx bx-slideshow"></i>
                                 </div>
-                                <h4><a href="">Content & Video Editing</a></h4>
-                                <p>Create and edit video content with cool effects and transitions</p>
+                                <h4><a href="">Graphic Design & Video Editing</a></h4>
+                                <p>Design and create visually aesthetics and professional-looking video or graphic</p>
                             </div>
                         </div>
 
@@ -264,7 +264,7 @@
                                     <i class="bx bx-group"></i>
                                 </div>
                                 <h4><a href="">Working on Team</a></h4>
-                                <p>Easy to communicate and working on project that required teamwork</p>
+                                <p>Proactive and actively communicate when working on project that required teamworks</p>
                             </div>
                         </div>
                     </div>
@@ -277,7 +277,7 @@
                 <div class="container" data-aos="fade-up">
                     <div class="section-title">
                         <h2>Resume</h2>
-                        <p>This is the summary of my contact, CV, academic background, internship experience and working experience</p>
+                        <p>This is the summary for my contact, CV, academic background, internship and working experience</p>
                     </div>
 
                     <div class="row">
@@ -308,7 +308,7 @@
                                 <br />
                                 <p>
                                     For more information, Please download my CV
-                                    <a href="./assets/cv/CV_Ignaz Maula Ibrahim.pdf"><strong>here</strong></a>
+                                    <a href="./assets/cv/Ignaz Maula CV.pdf"><strong>here</strong></a>
                                 </p>
                                 <br />
                             </div>
@@ -318,15 +318,15 @@
                                 <h4><a href="http://www.help.edu.my" target="_blank">HELP University Kuala Lumpur</a></h4>
                                 <p><b>Bachelor of Information & Technology (B.I.T Hons)</b></p>
                                 <p><em>2018 - 2023</em></p>
-                                <p>
-                                    No. 15, Jalan Sri Semantan 1, Off, Jalan Semantan, Bukit Damansara, Kuala Lumpur, Malaysia, Kuala Lumpur, Malaysia
-                                </p>
+                                <p><b>Cumulative GPA:</b> 3.47/4.00</p>
+                                <br />
                             </div>
                             <div class="resume-item">
                                 <h4><a href="http://www.stikom-bali.ac.id" target="_blank">ITB STIKOM Bali</a></h4>
                                 <p><b>Bachelor of Computer System (S.Kom)</b></p>
                                 <p><em>2018 - 2022</em></p>
-                                <p>Jl. Raya Puputan No.86, Dangin Puri Klod, Kec. Denpasar Tim., Kota Denpasar, Bali, Indonesia</p>
+                                <p><b>Cumulative GPA:</b> 3.68/4.00</p>
+                                <br />
                             </div>
                         </div>
                         <div class="col-lg-6">
@@ -336,14 +336,14 @@
                                 <p><b>Software Engineer</b></p>
                                 <p><em>2022 - 2023</em></p>
                                 <p>
-                                    Developed various enterprise-level ERP software that provide solutions through the utilization of IoT (Internet of
+                                    Developed various enterprise-level software that provide solution through the utilization of IoT (Internet of
                                     Things). Worked on multiple projects ranging from warehouse and inventory management system to field service
-                                    management system using MS SQL, ASP .NET, Entity Framework, and Blazor
+                                    management system by using MS SQL, ASP .NET, Entity Framework, and Blazor.
                                 </p>
                             </div>
                             <div class="resume-item">
                                 <h4><a href="http://www.andanacreative.com" target="_blank">Andana Creative</a></h4>
-                                <p><b>Web Programmer</b></p>
+                                <p><b>Web Developer</b></p>
                                 <p><em>2020 - 2021</em></p>
                                 <p>
                                     Developed multiple website projects targeted for small and medium enterprises with the purpose of increasing their
@@ -356,8 +356,8 @@
                                 <p><b>Software Engineer Intern</b></p>
                                 <p><em>2021 - 2021</em></p>
                                 <p>
-                                    Developed variety of web and mobile applications such as property management software, event management software
-                                    and online radio streaming platform.
+                                    Developed a variety of web and mobile applications including property management software, event management
+                                    software and online radio streaming platform.
                                 </p>
                             </div>
                             <div class="resume-item">
@@ -407,18 +407,6 @@
                         </div>
                         <div class="col-lg-3 col-md-4 col-6 mt-4">
                             <div class="icon-box">
-                                <i class="devicon-mongodb-plain-wordmark colored"></i>
-                                <h3><a href="">Mongo Db</a></h3>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-6 mt-4">
-                            <div class="icon-box">
-                                <i class="devicon-express-original colored"></i>
-                                <h3><a href="">Express.js</a></h3>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-6 mt-4">
-                            <div class="icon-box">
                                 <i class="devicon-react-original colored"></i>
                                 <h3><a href="">React.js</a></h3>
                             </div>
@@ -431,8 +419,8 @@
                         </div>
                         <div class="col-lg-3 col-md-4 col-6 mt-4">
                             <div class="icon-box">
-                                <i class="devicon-mysql-plain colored"></i>
-                                <h3><a href="">MySQL</a></h3>
+                                <i class="devicon-express-original colored"></i>
+                                <h3><a href="">Express.js</a></h3>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6 mt-4">
@@ -444,7 +432,19 @@
                         <div class="col-lg-3 col-md-4 col-6 mt-4">
                             <div class="icon-box">
                                 <i class="devicon-dotnetcore-plain colored"></i>
-                                <h3><a href="">.NET Core</a></h3>
+                                <h3><a href="">ASP .NET</a></h3>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-4 col-6 mt-4">
+                            <div class="icon-box">
+                                <i class="devicon-mongodb-plain-wordmark colored"></i>
+                                <h3><a href="">Mongo Db</a></h3>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-4 col-6 mt-4">
+                            <div class="icon-box">
+                                <i class="devicon-microsoftsqlserver-plain colored"></i>
+                                <h3><a href="">MS SQL</a></h3>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6 mt-4">
@@ -464,7 +464,7 @@
                     <div class="section-title">
                         <h2>Portfolio</h2>
                         <p>
-                            Here are the work on multiple projects that I have been done with various technology. Visit my
+                            These are some of my personal works that I have done using various technologies and tools. Visit my
                             <a href="https://github.com/IgnazMaula">GitHub</a> to see more.
                         </p>
                     </div>
@@ -502,7 +502,7 @@
                                 <img src="./assets/img/portfolio/ctis.png" class="img-fluid" alt="" />
                                 <div class="portfolio-info">
                                     <h4>Counter-Covid CTIS</h4>
-                                    <p>Laravel Web App for register and track covid-19 vaccination</p>
+                                    <p>Laravel web app for register and track covid-19 vaccination</p>
                                 </div>
                                 <div class="portfolio-links">
                                     <a href="https://github.com/IgnazMaula/Counter-Covid-CTIS-webapp" target="_blank"
@@ -548,7 +548,7 @@
                                 <img src="./assets/img/portfolio/react-shopping-cart.png" class="img-fluid" alt="" />
                                 <div class="portfolio-info">
                                     <h4>React Shopping Cart</h4>
-                                    <p>Shopping cart app build with React, Redux and Firebase</p>
+                                    <p>Shopping cart app build in React, Redux and Firebase</p>
                                 </div>
                                 <div class="portfolio-links">
                                     <a href="https://github.com/IgnazMaula/react-redux-advance" target="_blank"
