--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                                 <br />
                                 <p>
                                     For more information, Please download my CV
-                                    <a href="./assets/cv/Ignaz Maula CV.pdf"><strong>here</strong></a>
+                                    <a href="./assets/cv/Ignaz-Maula-CV.pdf"><strong>here</strong></a>
                                 </p>
                                 <br />
                             </div>
