--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                     Involved in the development of various projects, including
                     warehouse and inventory management systems and field service
                     management platforms, utilizing a tech stack of .NET Core,
-                    Blazor and .NET MAUI, and, SQL Server to deliver robust and
+                    Blazor, Xamarin, .NET MAUI, and SQL Server to deliver robust and
                     scalable solutions.
                   </li>
                 </ul>
@@ -720,15 +720,37 @@
             <div class="col-lg-12 d-flex justify-content-center">
               <ul id="portfolio-flters">
                 <li data-filter="*" class="filter-active">All</li>
-                <li data-filter=".filter-web">Web</li>
                 <li data-filter=".filter-app">App</li>
+                <li data-filter=".filter-web">Web</li>
                 <li data-filter=".filter-design">Design</li>
               </ul>
             </div>
           </div>
 
           <div class="row portfolio-container">
-            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-wrap">
+                <img
+                  src="./assets/img/portfolio/FinTracker.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-info">
+                  <h4>FinTracker</h4>
+                  <p>Cashflow and investment asset tracking and management app</p>
+                </div>
+                <div class="portfolio-links">
+                  <a
+                    href="https://github.com/IgnazMaula/FinTracker"
+                    target="_blank"
+                    ><i class="devicon-github-original"></i
+                  ></a>
+                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
                   src="./assets/img/portfolio/kitabantu.png"
@@ -750,7 +772,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
                   src="./assets/img/portfolio/ctis.png"
@@ -803,110 +825,19 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
                 <img
-                  src="./assets/img/portfolio/task-management.png"
+                  src="./assets/img/portfolio/Nuju.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>Task Management App</h4>
-                  <p>
-                    Task management app build in React, Redux, and Material UI
-                  </p>
+                  <h4>Nuju Architects</h4>
+                  <p>Profile website for Nuju Architects</p>
                 </div>
                 <div class="portfolio-links">
                   <a
-                    href="https://github.com/IgnazMaula/react-redux-advance"
+                    href="https://github.com/IgnazMaula/NujuArchitects"
                     target="_blank"
                     ><i class="devicon-github-original"></i
-                  ></a>
-                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-              <div class="portfolio-wrap">
-                <img
-                  src="./assets/img/portfolio/react-shopping-cart.png"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="portfolio-info">
-                  <h4>React Shopping Cart</h4>
-                  <p>Shopping cart app build in React, Redux and Firebase</p>
-                </div>
-                <div class="portfolio-links">
-                  <a
-                    href="https://github.com/IgnazMaula/react-redux-advance"
-                    target="_blank"
-                    ><i class="devicon-github-original"></i
-                  ></a>
-                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-              <div class="portfolio-wrap">
-                <img
-                  src="./assets/img/portfolio/react-blog.png"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="portfolio-info">
-                  <h4>React Blogpost</h4>
-                  <p>Blog web app build in React using jsonplaceholder</p>
-                </div>
-                <div class="portfolio-links">
-                  <a
-                    href="https://github.com/IgnazMaula/react-blogpost"
-                    target="_blank"
-                    ><i class="devicon-github-original"></i
-                  ></a>
-                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-              <div class="portfolio-wrap">
-                <img
-                  src="./assets/img/portfolio/radiolime.png"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="portfolio-info">
-                  <h4>RadioLime</h4>
-                  <p>Javascript-based cloud radio streaming application</p>
-                </div>
-                <div class="portfolio-links">
-                  <!-- <a href="https://github.com/IgnazMaula/kitabantu-web-app" target="_blank"><i class="devicon-github-original"></i></a> -->
-                  <a href="https://radiolime.co.uk/" target="_blank"
-                    ><i class="bx bx-link"></i
-                  ></a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-              <div class="portfolio-wrap">
-                <img
-                  src="./assets/img/portfolio/andana.png"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="portfolio-info">
-                  <h4>Andana Creative</h4>
-                  <p>Landing page for Andana Branding Agency</p>
-                </div>
-                <div class="portfolio-links">
-                  <a
-                    href="https://github.com/IgnazMaula/AndanaCreativeRevision"
-                    target="_blank"
-                    ><i class="devicon-github-original"></i
-                  ></a>
-                  <a href="https://andanacreative.com" target="_blank"
-                    ><i class="bx bx-link"></i
                   ></a>
                 </div>
               </div>
@@ -932,7 +863,31 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-wrap">
+                <img
+                  src="./assets/img/portfolio/task-management.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-info">
+                  <h4>Task Management App</h4>
+                  <p>
+                    Task management app build in React, Redux, and Material UI
+                  </p>
+                </div>
+                <div class="portfolio-links">
+                  <a
+                    href="https://github.com/IgnazMaula/react-redux-advance"
+                    target="_blank"
+                    ><i class="devicon-github-original"></i
+                  ></a>
+                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+                </div>
+              </div>
+            </div>
+            
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
                   src="./assets/img/portfolio/javascriptentertainment.png"
@@ -952,6 +907,118 @@
                   <a
                     href="https://ignazmaula.github.io/JavascriptEntertainmentPlatform"
                     target="_blank"
+                    ><i class="bx bx-link"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+            
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-wrap">
+                <img
+                  src="./assets/img/portfolio/QueueLink.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-info">
+                  <h4>QueueLink</h4>
+                  <p>
+                    Leaderboard app to rank users based on their refferal
+                  </p>
+                </div>
+                <div class="portfolio-links">
+                  <a
+                    href="https://github.com/IgnazMaula/react-redux-advance"
+                    target="_blank"
+                    ><i class="devicon-github-original"></i
+                  ></a>
+                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-wrap">
+                <img
+                  src="./assets/img/portfolio/radiolime.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-info">
+                  <h4>RadioLime</h4>
+                  <p>Javascript-based cloud radio streaming application</p>
+                </div>
+                <div class="portfolio-links">
+                  <!-- <a href="https://github.com/IgnazMaula/kitabantu-web-app" target="_blank"><i class="devicon-github-original"></i></a> -->
+                  <a href="https://radiolime.co.uk/" target="_blank"
+                    ><i class="bx bx-link"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-wrap">
+                <img
+                  src="./assets/img/portfolio/react-shopping-cart.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-info">
+                  <h4>Shopping Cart App</h4>
+                  <p>Shopping cart app build in React, Redux and Firebase</p>
+                </div>
+                <div class="portfolio-links">
+                  <a
+                    href="https://github.com/IgnazMaula/react-redux-advance"
+                    target="_blank"
+                    ><i class="devicon-github-original"></i
+                  ></a>
+                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-wrap">
+                <img
+                  src="./assets/img/portfolio/react-blog.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-info">
+                  <h4>Blog Post Web App</h4>
+                  <p>Blog web app build in React</p>
+                </div>
+                <div class="portfolio-links">
+                  <a
+                    href="https://github.com/IgnazMaula/react-blogpost"
+                    target="_blank"
+                    ><i class="devicon-github-original"></i
+                  ></a>
+                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+              <div class="portfolio-wrap">
+                <img
+                  src="./assets/img/portfolio/andana.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-info">
+                  <h4>Andana Creative</h4>
+                  <p>Landing page for Andana Branding Agency</p>
+                </div>
+                <div class="portfolio-links">
+                  <a
+                    href="https://github.com/IgnazMaula/AndanaCreativeRevision"
+                    target="_blank"
+                    ><i class="devicon-github-original"></i
+                  ></a>
+                  <a href="https://andanacreative.com" target="_blank"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
