--- a/index.html
+++ b/index.html
@@ -1239,8 +1239,8 @@
     <script src="./assets/vendor/waypoints/noframework.waypoints.js"></script>
 
     <!-- Particle JS -->
-    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="./assets/js/particle-config.js"></script>
+    <!-- <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="./assets/js/particle-config.js"></script> -->
 
     <!-- Template Main JS File -->
     <script src="./assets/js/main.js"></script>
