--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
             <br /><br />
             <h1 class="pb-2">Ignaz Maula</h1>
             <span class="role">Software Engineer | Tech Enthusiast</span
-            ><br /><br /><br />
+            ><br /><br />
+            <p class="quotes">"I craft technology that turns complexity into clarity and possibility into reality"</p>
             <p>
               A passionate software developer with a background in Information
               Technology. Throughout my journey, I've had the opportunity to
